feat: prepare as a library